--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ Jinja2==3.1.4
 Mako==1.3.5
 MarkupSafe==2.1.5
 msgspec==0.18.6
+mysql-connector-python==8.4.0
 python-dotenv==1.0.1
 pytz==2024.1
 six==1.16.0
