--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Flask==3.0.3
 Flask-Cors==4.0.1
 Flask-Mail==0.10.0
 Flask-Migrate==4.0.7
+Flask-MySQLdb==2.0.0
 Flask-RESTful==0.3.10
 Flask-Session==0.8.0
 Flask-SQLAlchemy==3.1.1
@@ -18,6 +19,8 @@ Mako==1.3.5
 MarkupSafe==2.1.5
 msgspec==0.18.6
 mysql-connector-python==8.4.0
+mysqlclient==2.2.4
+PyMySQL==1.1.1
 python-dotenv==1.0.1
 pytz==2024.1
 six==1.16.0
