--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ click==8.1.7
 colorama==0.4.6
 Flask==3.0.3
 Flask-Cors==4.0.1
+Flask-Login==0.6.3
 Flask-Mail==0.10.0
 Flask-Migrate==4.0.7
 Flask-MySQLdb==2.0.0
@@ -20,6 +21,7 @@ MarkupSafe==2.1.5
 msgspec==0.18.6
 mysql-connector-python==8.4.0
 mysqlclient==2.2.4
+pillow==10.3.0
 PyMySQL==1.1.1
 python-dotenv==1.0.1
 pytz==2024.1
