--- a/requirements.txt
+++ b/requirements.txt
@@ -18,9 +18,11 @@ itsdangerous==2.2.0
 Jinja2==3.1.4
 Mako==1.3.5
 MarkupSafe==2.1.5
+marshmallow==3.21.3
 msgspec==0.18.6
 mysql-connector-python==8.4.0
 mysqlclient==2.2.4
+packaging==24.1
 pillow==10.3.0
 PyMySQL==1.1.1
 python-dotenv==1.0.1
