--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,9 @@ click==8.1.7
 colorama==0.4.6
 Flask==3.0.3
 Flask-Cors==4.0.1
-Flask-Login==0.6.3
 Flask-Mail==0.10.0
+flask-marshmallow==1.2.1
 Flask-Migrate==4.0.7
-Flask-MySQLdb==2.0.0
 Flask-RESTful==0.3.10
 Flask-Session==0.8.0
 Flask-SQLAlchemy==3.1.1
@@ -19,12 +18,10 @@ Jinja2==3.1.4
 Mako==1.3.5
 MarkupSafe==2.1.5
 marshmallow==3.21.3
+marshmallow-sqlalchemy==1.0.0
 msgspec==0.18.6
-mysql-connector-python==8.4.0
-mysqlclient==2.2.4
 packaging==24.1
 pillow==10.3.0
-PyMySQL==1.1.1
 python-dotenv==1.0.1
 pytz==2024.1
 six==1.16.0
