--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ alembic==1.13.1
 aniso8601==9.0.1
 blinker==1.8.2
 cachelib==0.13.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
 click==8.1.7
 colorama==0.4.6
 Flask==3.0.3
@@ -13,6 +15,7 @@ Flask-RESTful==0.3.10
 Flask-Session==0.8.0
 Flask-SQLAlchemy==3.1.1
 greenlet==3.0.3
+idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.4
 Mako==1.3.5
@@ -24,7 +27,9 @@ packaging==24.1
 pillow==10.3.0
 python-dotenv==1.0.1
 pytz==2024.1
+requests==2.32.3
 six==1.16.0
 SQLAlchemy==2.0.30
 typing_extensions==4.12.0
+urllib3==2.2.3
 Werkzeug==3.0.3
