--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ Flask-Migrate==4.0.7
 Flask-RESTful==0.3.10
 Flask-Session==0.8.0
 Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.2
 greenlet==3.0.3
 idna==3.10
 itsdangerous==2.2.0
@@ -33,3 +34,4 @@ SQLAlchemy==2.0.30
 typing_extensions==4.12.0
 urllib3==2.2.3
 Werkzeug==3.0.3
+WTForms==3.2.1
